[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stegra-sync"
version = "0.1.0"
description = "One-way sync of routes/collections from Stegra.io to DMD Hub GPX folders."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Dan", email = "dan@reactive.org" }]
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "browser-cookie3>=0.20",
]

[project.scripts]
stegra-sync = "stegra_sync.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"stegra_sync" = ["py.typed"]
